# nordic_wifi_audio_demo

./: .gitignore  .gitmodules  README.md
nrf5340_audio/: README.md
wifi_audio/: CMakeLists.txt  Kconfig  Kconfig.defaults  README.md  overlay-audio-gateway.conf  overlay-audio-headset.conf  overlay-opus.conf  overlay-sta-static.conf  overlay-tcp.conf  overlay-wifi-provisioning.conf  overlay-wifi-softap.conf  overlay-wifi-sta-static.conf  prj.conf
wifi_audio/boards/: nrf5340_audio_dk_nrf5340_cpuapp.overlay
wifi_audio/src/: main.c  socket_util.c  wifi_softap_mode.c  wifi_station_mode.c  zbus_common.h
wifi_audio/src/audio/: CMakeLists.txt  Kconfig  Kconfig.defaults  audio_datapath.c  audio_datapath.h  audio_system.c  streamctrl.h  sw_codec_select.c  sw_codec_select.h  wifi_audio_rx.c  wifi_audio_rx.h
wifi_audio/src/audio/libc_opus/: audio_codec_opus.c  debug.h
wifi_audio/src/audio/opus/: audio_codec_opus.c  audio_codec_opus_api.h  debug.h
wifi_audio/src/audio/opus/libc_opus/: audio_codec_opus_api.h  config.h
wifi_audio/src/audio/opus_interface/: config.h  custom_support.h  opus_interface.c  opus_interface.h
wifi_audio/src/drivers/: cs47l63_comm.c  cs47l63_reg_conf.h
wifi_audio/src/modules/: Kconfig.defaults  audio_i2s.c  audio_sync_timer.c  audio_usb.c  board.h  button_handler.c  hw_codec.c  led.c  led.h  power_meas.c  sd_card.c  sd_card_playback.c
wifi_audio/src/net/: CMakeLists.txt  Kconfig  Kconfig.defaults  socket_util.h
wifi_audio/src/net/socket/: CMakeLists.txt  Kconfig  Kconfig.defaults  Kconfig.socket_util_module  socket_util.c  socket_util.h
wifi_audio/src/net/wifi/: CMakeLists.txt  Kconfig.defaults  Kconfig.wifi_module  wifi_softap_mode.c  wifi_station_mode.c
wifi_audio/src/utils/: board_version.c  fw_info_app.c.in  nrf5340_audio_dk.c  uicr.c
wifi_audio/src/utils/macros/: macros_common.h
wifi_audio/wifi_audio_gateway/: main.c
wifi_audio/wifi_audio_headset/: main.c
